[project]
name = "pubmed-project"
version = "0.1.0"
description = "A CLI Tool to fetch research papers for PubMed"
authors = [
    {name = "Protima Kumbhakar"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
